<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.cavetale.halloween</groupId>
  <artifactId>halloween</artifactId>
  <packaging>jar</packaging>
  <version>0.1-SNAPSHOT</version>
  <name>Halloween</name>
  <url>https://cavetale.com</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
    <finalName>${project.name}</finalName>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <source>16</source>
          <target>16</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>-Xlint:unchecked</arg>
          </compilerArgs>
        </configuration>
      </plugin>

    </plugins>
  </build>
  <repositories>

    <!-- Cavetale Repo -->
    <repository>
      <id>cavetale</id>
      <url>https://cavetale.com/jenkins/plugin/repository/everything/</url>
    </repository>

    <!-- Paper Repo -->
    <repository>
      <id>papermc</id>
      <url>https://papermc.io/repo/repository/maven-public/</url>
    </repository>

  </repositories>
  <dependencies>

    <!-- Paper API -->
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.17.1-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.20</version>
      <scope>provided</scope>
    </dependency>

    <!-- Dungeons -->
    <dependency>
      <groupId>com.cavetale.dungeons</groupId>
      <artifactId>dungeons</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Dirty -->
    <dependency>
      <groupId>com.cavetale.dirty</groupId>
      <artifactId>dirty</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- WorldMarker -->
    <dependency>
      <groupId>com.cavetale.worldmarker</groupId>
      <artifactId>worldmarker</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Mytems -->
    <dependency>
      <groupId>com.cavetale.mytems</groupId>
      <artifactId>mytems</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Money -->
    <dependency>
      <groupId>com.cavetale.money</groupId>
      <artifactId>money</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>
</project>
